--- a/templates/all-ingredients.html
+++ b/templates/all-ingredients.html
@@ -1,18 +1,11 @@
 <div class="row">
     <div class="col-sm-5">
-        <!--<ul>
-            <li class="list-group-item"
-                    ng-repeat="ingredient in recipeBook.allIngredients"
-                    ng-attr-data-ingredient="{{ingredient.id}}">
-                <span>{{ingredient.ingredient_name}} ({{ingredient.type_name}})</span>
-            </li>
-        </ul>-->
-
-        <a href class="list-group-item"
+        <a href
+            class="list-group-item"
             ng-repeat="ingredient in recipeBook.allIngredients"
-            ng-attr-data-ingredient="{{ingredient.ingredient_id}}"
-            editable-text="ingredient.ingredient_name">{{ingredient.ingredient_name}}
-            <!--<select ng-model="ingredientType" ng-options="type.name for type in recipeBook.allTypes"></select>-->
+            ng-attr-data-ingredient="{{ingredient.ingredient_id}}">
+            <span editable-text="ingredient.ingredient_name">{{ingredient.ingredient_name}}</span>
+            (<select editable-select="type" e-ng-options="type.id as type.name for type in recipeBook.allTypes" ng-attr-value="{{type.name}}"></select><!--<span editable-text="ingredient.type_name">{{ingredient.type_name}}</span>-->)
         </a>
     </div>
 </div>
