--- a/templates/all-ingredients.html
+++ b/templates/all-ingredients.html
@@ -6,14 +6,16 @@
             ng-attr-data-ingredient="{{ingredient.ingredient_id}}">
             <span
                 editable-text="ingredient.ingredient_name"
+                onbeforesave="updateIngredientName($data, ingredient.ingredient_id)"
                 class="list-group-item-heading">
                 {{ingredient.ingredient_name}}
             </span>
             <span
                   editable-select="ingredient.type_id"
                   e-ng-options="type.id as type.name for type in recipeBook.allTypes"
-                    class="list-group-item-text badge">
-            {{  recipeBook.showType(ingredient.type_id) }}
+                  onbeforesave="updateIngredientType($data, ingredient.ingredient_id)"
+                  class="list-group-item-text badge">
+            {{ recipeBook.showType(ingredient.type_id) }}
             </span>
         </a>
     </div>
