added preliminary recipe selection and collapse on click to navbar

--- a/templates/all-types.html
+++ b/templates/all-types.html
@@ -9,6 +9,7 @@
                 class="list-group-item-heading">
                 {{type.name}}
             </span>
+            <button type="button" class="btn btn-primary btn-xs delete-item">remove</button>
         </a>
     </div>
 </div>
